fixed footer alignment

--- a/css/main.css
+++ b/css/main.css
@@ -1498,7 +1498,7 @@ input::-moz-focus-inner {
 
 .section-desc {
   font-family: "IBM Plex Mono", monospace;
-  font-size: 4.5rem;
+  font-size: 3.5rem;
   font-weight: 100;
   line-height: 1.259;
   letter-spacing: 0.05rem;
@@ -2921,8 +2921,8 @@ input::-moz-focus-inner {
  *
  * ------------------------------------------------------------------- */
 .s-contact {
-  padding-top: 9.6rem;
-  padding-bottom: 6.4rem;
+  padding-top: 9rem;
+  padding-bottom: 3.2rem;
   background-color: #0a0a0a;
 }
 
@@ -2947,15 +2947,15 @@ input::-moz-focus-inner {
 }
 
 .contact-infos {
-  margin-top: 10rem;
+  margin-top: 5rem;
   font-family: "IBM Plex Mono", monospace;
   font-weight: 100;
-  font-size: 4.2rem;
+  font-size: 3.5rem;
   line-height: 1.333;
 }
 
 .contact-infos .column {
-  margin-bottom: 1.6rem;
+  margin-bottom: 0rem;
 }
 
 .contact-infos h4 {
@@ -3093,7 +3093,7 @@ input::-moz-focus-inner {
 footer { 
   line-height: 2;
   padding-top: 0;
-  padding-bottom: 6.4rem;
+  padding-bottom: 3.2rem;
   background-color: #0a0a0a;
 
   font-family: "IBM Plex Mono", monospace;
@@ -3114,7 +3114,7 @@ footer a:visited {
  * ## copyright
  * ------------------------------------------------------------------- */
 .ss-copyright {
-  margin-top: 2rem;
+  margin-top: 4rem;
   padding-right: 80px;
 }
 
@@ -3228,7 +3228,7 @@ footer a:visited {
 
 @media screen and (max-width:600px) {
   .ss-copyright {
-    margin-top: 9rem;
+    margin-top: 0rem;
     padding: 0;
     text-align: center;
   }
